--- a/Shopthoitrang/dang-ky.html
+++ b/Shopthoitrang/dang-ky.html
@@ -4,21 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng ký - DTN Shop</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; display: flex; justify-content: center; align-items: center; height: 100vh; }
-        .container { background-color: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); width: 400px; }
-        h2 { text-align: center; margin-bottom: 20px; }
-        .form-group { margin-bottom: 15px; }
-        label { display: block; margin-bottom: 5px; }
-        input { width: 100%; padding: 8px; box-sizing: border-box; border: 1px solid #ddd; border-radius: 4px; }
-        button { width: 100%; padding: 10px; background-color: #28a745; color: white; border: none; border-radius: 4px; cursor: pointer; }
-        button:hover { background-color: #218838; }
-        #message { text-align: center; color: red; margin-top: 10px; }
-        .toggle-btn { text-align: center; margin-top: 10px; }
-        .toggle-btn a { color: #28a745; text-decoration: none; }
-        .toggle-btn a:hover { text-decoration: underline; }
-        .success { color: green; }
-    </style>
+    <link rel="stylesheet" href="/Shopthoitrang/css/dang-ky.css">
 </head>
 <body>
     <div class="container">
@@ -46,80 +32,8 @@
         <div id="message"></div>
     </div>
 
-    <script>
-        async function dangKy() {
-            const ten = document.getElementById('register-ten').value.trim();
-            const soDienThoai = document.getElementById('register-so-dien-thoai').value.trim();
-            const email = document.getElementById('register-email').value.trim();
-            const diaChi = document.getElementById('register-dia_chi').value.trim();
-            const messageDiv = document.getElementById('message');
-
-            if (!ten || !soDienThoai || !email) {
-                messageDiv.textContent = 'Vui lòng điền đủ thông tin bắt buộc!';
-                return;
-            }
-
-            if (!/^[0-9]{10}$/.test(soDienThoai)) {
-                messageDiv.textContent = 'Số điện thoại phải là 10 chữ số!';
-                return;
-            }
-
-            if (!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)) {
-                messageDiv.textContent = 'Email không hợp lệ!';
-                return;
-            }
-
-            if (!/^[a-zA-ZÀ-ỹ\s]+$/.test(ten)) {
-                messageDiv.textContent = 'Tên chỉ được chứa chữ cái và khoảng trắng!';
-                return;
-            }
-
-            const khachHang = {
-                ten_khach_hang: ten,
-                so_dien_thoai: soDienThoai,
-                email: email,
-                dia_chi: diaChi
-            };
-
-            try {
-                const response = await fetch('http://127.0.0.1:5000/khachhang', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(khachHang)
-                });
-
-                const data = await response.json();
-
-                if (response.ok) {
-                    messageDiv.textContent = data.message;
-                    messageDiv.className = 'success';
-
-                    localStorage.setItem('id_khach_hang', data.id_khach_hang);
-
-                    document.getElementById('register-ten').value = '';
-                    document.getElementById('register-so-dien-thoai').value = '';
-                    document.getElementById('register-email').value = '';
-                    document.getElementById('register-dia_chi').value = '';
-
-                    setTimeout(() => {
-                        window.location.href = '/Shopthoitrang/trang-chu.html';
-                    }, 2000);
-                } else {
-                    messageDiv.textContent = data.error || 'Lỗi không xác định từ server.';
-                }
-            } catch (error) {
-                console.error('Lỗi API dangKy:', error);
-                messageDiv.textContent = 'Lỗi khi kết nối đến server. Vui lòng thử lại!';
-            }
-        }
-
-        document.querySelectorAll('input').forEach(input => {
-            input.addEventListener('keypress', function(e) {
-                if (e.key === 'Enter') {
-                    dangKy();
-                }
-            });
-        });
+    <script src="js/dang-ky.js">
+        
     </script>
 </body>
 </html>
