--- a/Shopthoitrang/dang-nhap.html
+++ b/Shopthoitrang/dang-nhap.html
@@ -4,71 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng nhập - DTN Shop</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            width: 400px;
-        }
-        h2 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        input {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-        button {
-            width: 100%;
-            padding: 10px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #218838;
-        }
-        #message {
-            text-align: center;
-            color: red;
-            margin-top: 10px;
-        }
-        .toggle-btn {
-            text-align: center;
-            margin-top: 10px;
-        }
-        .toggle-btn a {
-            color: #28a745;
-            text-decoration: none;
-        }
-        .toggle-btn a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="/Shopthoitrang/css/dang-nhap.css">
 </head>
 <body>
     <div class="container">
@@ -88,45 +24,8 @@
         <div id="message"></div>
     </div>
 
-    <script>
-       async function dangNhap() {
-    const tenDangNhap = document.getElementById('ten_dang_nhap').value;
-    const matKhau = document.getElementById('mat_khau').value;
-
-    if (!tenDangNhap || !matKhau) {
-        document.getElementById('message').textContent = 'Vui lòng điền đầy đủ thông tin!';
-        return;
-    }
-
-    try {
-        const response = await fetch('http://127.0.0.1:5000/login', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ ten_dang_nhap: tenDangNhap, mat_khau: matKhau })
-        });
-        const data = await response.json();
-
-        // Chỉ xử lý khi response.ok (mã 200)
-        if (response.ok) {
-            document.getElementById('message').textContent = data.message;
-            if (data.id_khach_hang) {
-                localStorage.setItem('id_khach_hang', data.id_khach_hang);
-                localStorage.setItem('ten_khach_hang', data.ten_khach_hang);
-                setTimeout(() => window.location.href = data.redirect, 1000);
-            } else if (data.id_quan_tri) {
-                localStorage.setItem('id_quan_tri', data.id_quan_tri);
-                localStorage.setItem('tai_khoan', data.tai_khoan);
-                setTimeout(() => window.location.href = data.redirect, 1000);
-            }
-        } else {
-            document.getElementById('message').textContent = data.error;
-            // Không chuyển hướng khi có lỗi (mã 401, 403, v.v.)
-        }
-    } catch (error) {
-        console.error('Lỗi API dangNhap:', error);
-        document.getElementById('message').textContent = 'Lỗi khi đăng nhập!';
-    }
-}
+    <script src="js/dang-nhap.js">
+       
     </script>
 </body>
 </html>
