--- a/Shopthoitrang/admin-danh-muc.html
+++ b/Shopthoitrang/admin-danh-muc.html
@@ -4,162 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quản lý danh mục - Admin</title>
-    <link rel="stylesheet" href="/Shopthoitrang/css/admin-danh-muc.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <header>
-        <h1>QUẢN LÝ DANH MỤC - ADMIN</h1>
-        <a href="/Shopthoitrang/admin.html" class="block py-2 px-4 mt-4 text-indigo-600 hover:text-indigo-800 font-semibold">BACK</a>
+<body class="bg-gray-900 font-sans text-white min-h-screen flex flex-col">
+    <!-- Header -->
+    <header class="bg-gray-900 text-white">
+        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+            <h1 class="text-2xl font-bold">Quản lý danh mục - Admin</h1>
+            <div>
+                
+            </div>
+        </div>
     </header>
-    <div class="container">
-        <div class="add-form">
-            <input type="number" id="id-danh-muc" placeholder="ID danh mục" required>
-            <input type="text" id="ten-danh-muc" placeholder="Tên danh mục" required>
-            <button onclick="themDanhMuc()">Thêm danh mục</button>
-        </div>
-        <div id="edit-form" class="edit-form">
-            <input type="hidden" id="edit-id-danh-muc">
-            <input type="text" id="edit-ten-danh-muc" placeholder="Tên danh mục" required>
-            <button class="save-btn" onclick="luuChinhSua()">Lưu</button>
-            <button class="cancel-btn" onclick="huyChinhSua()">Hủy</button>
-        </div>
-        <table id="danh-muc-table">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Tên danh mục</th>
-                    <th>Hành động</th>
-                </tr>
-            </thead>
-            <tbody id="danh-muc-body"></tbody>
-        </table>
+
+    <!-- Layout -->
+    <div class="flex flex-1">
+        <!-- Sidebar -->
+        <aside class="w-64 bg-gray-800 shadow-md p-4">
+            <nav class="space-y-4">
+                <a href="/Shopthoitrang/admin.html" class="block py-2 px-4 mt-4 text-indigo-400 hover:text-indigo-300 font-semibold">MAIN</a>
+                <a href="/Shopthoitrang/admin-products.html" class="block py-2 px-4 rounded hover:bg-gray-700 text-gray-300 hover:text-white font-medium">Sản phẩm</a>
+                <a href="/Shopthoitrang/admin-danh-muc.html" class="block py-2 px-4 rounded bg-gray-700 text-gray-300 hover:text-white font-medium">Danh mục</a>
+                <a href="/Shopthoitrang/admin-khachhang.html" class="block py-2 px-4 rounded hover:bg-gray-700 text-gray-300 hover:text-white font-medium">Khách hàng</a>
+                <a href="/Shopthoitrang/trang-chu.html" class="block py-2 px-4 mt-4 text-indigo-400 hover:text-indigo-300 font-semibold">Về trang chủ</a>
+            </nav>
+        </aside>
+
+        <!-- Main Content -->
+        <main class="flex-1 p-6 bg-gray-800">
+            <div class="container mx-auto">
+                <div class="add-form bg-gray-800 shadow-md rounded-lg p-6 mb-8">
+                    <h2 class="text-2xl font-bold text-white mb-4">Thêm danh mục</h2>
+                    <input type="number" id="id-danh-muc" placeholder="ID danh mục" class="mb-4 p-2 w-full border border-gray-600 bg-gray-700 text-white rounded" required>
+                    <input type="text" id="ten-danh-muc" placeholder="Tên danh mục" class="mb-4 p-2 w-full border border-gray-600 bg-gray-700 text-white rounded" required>
+                    <button onclick="themDanhMuc()" class="bg-indigo-600 text-white py-2 px-4 rounded hover:bg-indigo-700">Thêm danh mục</button>
+                </div>
+                <div id="edit-form" class="edit-form bg-gray-800 shadow-md rounded-lg p-6 mb-8 hidden">
+                    <h2 class="text-2xl font-bold text-white mb-4">Chỉnh sửa danh mục</h2>
+                    <input type="hidden" id="edit-id-danh-muc">
+                    <input type="text" id="edit-ten-danh-muc" placeholder="Tên danh mục" class="mb-4 p-2 w-full border border-gray-600 bg-gray-700 text-white rounded" required>
+                    <div class="flex space-x-4">
+                        <button class="save-btn bg-indigo-600 text-white py-2 px-4 rounded hover:bg-indigo-700" onclick="luuChinhSua()">Lưu</button>
+                        <button class="cancel-btn bg-gray-600 text-white py-2 px-4 rounded hover:bg-gray-500" onclick="huyChinhSua()">Hủy</button>
+                    </div>
+                </div>
+                <div class="bg-gray-800 shadow-md rounded-lg p-6">
+                    <h2 class="text-2xl font-bold text-white mb-4">Danh sách danh mục</h2>
+                    <table id="danh-muc-table" class="w-full text-left text-white">
+                        <thead class="bg-gray-700 text-gray-300 uppercase">
+                            <tr>
+                                <th class="p-2">ID</th>
+                                <th class="p-2">Tên danh mục</th>
+                                <th class="p-2">Hành động</th>
+                            </tr>
+                        </thead>
+                        <tbody id="danh-muc-body" class="divide-y divide-gray-600 text-gray-100">
+                            <!-- Danh mục sẽ được thêm bằng JavaScript -->
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </main>
     </div>
-    <script>
-        async function getDanhMuc() {
-            try {
-                const response = await fetch('http://127.0.0.1:5000/danhmuc');
-                if (!response.ok) throw new Error('Lỗi khi lấy danh sách danh mục');
-                const data = await response.json();
-                return data;
-            } catch (error) {
-                console.error('Lỗi API getDanhMuc:', error);
-                return [];
-            }
-        }
 
-        function hienThiDanhSachDanhMuc() {
-            const tbody = document.getElementById('danh-muc-body');
-            tbody.innerHTML = '';
-            getDanhMuc().then(danhMuc => {
-                danhMuc.forEach(dm => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                        <td>${dm.id_danh_muc}</td>
-                        <td>${dm.ten_danh_muc}</td>
-                        <td>
-                            <button class="edit-btn" onclick="hienFormChinhSua(${dm.id_danh_muc}, '${dm.ten_danh_muc}')">Sửa</button>
-                            <button class="delete-btn" onclick="xoaDanhMuc(${dm.id_danh_muc})">Xóa</button>
-                        </td>
-                    `;
-                    tbody.appendChild(row);
-                });
-            });
-        }
+    <!-- Footer -->
+    <footer class="bg-gray-800 border-t border-gray-700 py-4">
+        <div class="container mx-auto px-4 text-center">
+            <p class="text-gray-300">© 2025 DTN Shop. All rights reserved.</p>
+        </div>
+    </footer>
 
-        async function themDanhMuc() {
-            const idDanhMuc = document.getElementById('id-danh-muc').value;
-            const tenDanhMuc = document.getElementById('ten-danh-muc').value;
-
-            if (!idDanhMuc || !tenDanhMuc) {
-                alert('Vui lòng nhập đầy đủ thông tin!');
-                return;
-            }
-
-            try {
-                const response = await fetch('http://127.0.0.1:5000/danhmuc', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ id_danh_muc: parseInt(idDanhMuc), ten_danh_muc: tenDanhMuc })
-                });
-                if (response.ok) {
-                    alert('Thêm danh mục thành công!');
-                    document.getElementById('id-danh-muc').value = '';
-                    document.getElementById('ten-danh-muc').value = '';
-                    hienThiDanhSachDanhMuc();
-                } else {
-                    const errorData = await response.json();
-                    alert('Lỗi khi thêm danh mục: ' + errorData.error);
-                }
-            } catch (error) {
-                console.error('Lỗi API themDanhMuc:', error);
-                alert('Lỗi khi thêm danh mục!');
-            }
-        }
-
-        function hienFormChinhSua(id, ten) {
-            document.getElementById('edit-id-danh-muc').value = id;
-            document.getElementById('edit-ten-danh-muc').value = ten;
-            document.getElementById('edit-form').style.display = 'block';
-        }
-
-        function huyChinhSua() {
-            document.getElementById('edit-form').style.display = 'none';
-            document.getElementById('edit-id-danh-muc').value = '';
-            document.getElementById('edit-ten-danh-muc').value = '';
-        }
-
-        async function luuChinhSua() {
-            const id = document.getElementById('edit-id-danh-muc').value;
-            const ten = document.getElementById('edit-ten-danh-muc').value;
-
-            if (!ten) {
-                alert('Vui lòng nhập tên danh mục!');
-                return;
-            }
-
-            try {
-                const response = await fetch(`http://127.0.0.1:5000/danhmuc/${id}`, {
-                    method: 'PUT',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ ten_danh_muc: ten })
-                });
-                if (response.ok) {
-                    alert('Cập nhật danh mục thành công!');
-                    huyChinhSua();
-                    hienThiDanhSachDanhMuc();
-                } else {
-                    const errorData = await response.json();
-                    alert('Lỗi khi cập nhật danh mục: ' + errorData.error);
-                }
-            } catch (error) {
-                console.error('Lỗi API luuChinhSua:', error);
-                alert('Lỗi khi cập nhật danh mục!');
-            }
-        }
-
-        async function xoaDanhMuc(id) {
-            if (confirm('Bạn có chắc muốn xóa danh mục này?')) {
-                try {
-                    const response = await fetch(`http://127.0.0.1:5000/danhmuc/${id}`, {
-                        method: 'DELETE'
-                    });
-                    if (response.ok) {
-                        alert('Xóa danh mục thành công!');
-                        hienThiDanhSachDanhMuc();
-                    } else {
-                        const errorData = await response.json();
-                        alert('Lỗi khi xóa danh mục: ' + errorData.error);
-                    }
-                } catch (error) {
-                    console.error('Lỗi API xoaDanhMuc:', error);
-                    alert('Lỗi khi xóa danh mục!');
-                }
-            }
-        }
-
-        document.addEventListener('DOMContentLoaded', () => {
-            hienThiDanhSachDanhMuc();
-        });
-    </script>
+    <!-- JavaScript -->
+    <script src="js/admin-danh-muc.js"></script>
 </body>
 </html>
