--- a/Shopthoitrang/admin-products.html
+++ b/Shopthoitrang/admin-products.html
@@ -6,14 +6,13 @@
   <title>DTN Shop - Quản trị Sản phẩm</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 font-sans flex flex-col min-h-screen">
-
+<body class="bg-gray-900 font-sans text-white min-h-screen flex flex-col">
   <!-- Header -->
-  <header class="bg-black text-white">
+  <header class="bg-gray-900 text-white">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold">DTN Shop - Quản trị</h1>
+      <h1 class="text-2xl font-bold text-white">DTN Shop - Quản trị</h1>
       <div>
-        <a href="#" class="text-white hover:text-gray-200">Đăng xuất</a>
+        <a href="#" class="text-gray-300 hover:text-white">Đăng xuất</a>
       </div>
     </div>
   </header>
@@ -21,54 +20,54 @@
   <!-- Layout -->
   <div class="flex flex-1">
     <!-- Sidebar -->
-    <aside class="w-64 bg-white shadow-md p-4">
+    <aside class="w-64 bg-gray-800 shadow-md p-4">
       <nav class="space-y-4">
-        <a href="/Shopthoitrang/admin.html" class="block py-2 px-4 mt-4 text-indigo-600 hover:text-indigo-800 font-semibold">MAIN</a>
-        <a href="/Shopthoitrang/admin-products.html" class="block py-2 px-4 rounded hover:bg-indigo-100 text-gray-700 font-medium">Sản phẩm</a>
-        <a href="/Shopthoitrang/admin-danh-muc.html" class="block py-2 px-4 rounded hover:bg-indigo-100 text-gray-700 font-medium">Danh mục</a>
-        <a href="/Shopthoitrang/admin-khachhang.html" class="block py-2 px-4 rounded hover:bg-indigo-100 text-gray-700 font-medium">Khách hàng</a>
-        <a href="/Shopthoitrang/trang-chu.html" class="block py-2 px-4 mt-4 text-indigo-600 hover:text-indigo-800 font-semibold">Về trang chủ</a>
+        <a href="/Shopthoitrang/admin.html" class="block py-2 px-4 mt-4 text-indigo-400 hover:text-indigo-300 font-semibold">MAIN</a>
+        <a href="/Shopthoitrang/admin-products.html" class="block py-2 px-4 rounded bg-gray-700 text-gray-300 hover:text-white font-medium">Sản phẩm</a>
+        <a href="/Shopthoitrang/admin-danh-muc.html" class="block py-2 px-4 rounded hover:bg-gray-700 text-gray-300 hover:text-white font-medium">Danh mục</a>
+        <a href="/Shopthoitrang/admin-khachhang.html" class="block py-2 px-4 rounded hover:bg-gray-700 text-gray-300 hover:text-white font-medium">Khách hàng</a>
+        <a href="/Shopthoitrang/trang-chu.html" class="block py-2 px-4 mt-4 text-indigo-400 hover:text-indigo-300 font-semibold">Về trang chủ</a>
       </nav>
     </aside>
 
     <!-- Main Content -->
-    <main class="flex-1 p-6">
-      <h2 class="text-3xl font-bold mb-6">Thêm/Chỉnh sửa Sản phẩm</h2>
+    <main class="flex-1 p-6 bg-gray-800">
+      <h2 class="text-3xl font-bold text-white mb-6">Thêm/Chỉnh sửa Sản phẩm</h2>
       <div class="max-w-2xl mx-auto">
-        <form id="productForm" class="bg-white shadow-md rounded-lg p-6 mb-8">
+        <form id="productForm" class="bg-gray-800 shadow-md rounded-lg p-6 mb-8">
           <input type="hidden" id="editId">
           <div class="mb-4">
-            <label class="block text-sm font-medium text-gray-700">ID Sản phẩm</label>
-            <input type="text" id="id_san_pham" class="mt-1 p-2 w-full border rounded" required>
+            <label class="block text-sm font-medium text-gray-300">ID Sản phẩm</label>
+            <input type="text" id="id_san_pham" class="mt-1 p-2 w-full border border-gray-600 bg-gray-700 text-white rounded" required>
           </div>
           <div class="mb-4">
-            <label class="block text-sm font-medium text-gray-700">Tên Sản phẩm</label>
-            <input type="text" id="ten_san_pham" class="mt-1 p-2 w-full border rounded" required>
+            <label class="block text-sm font-medium text-gray-300">Tên Sản phẩm</label>
+            <input type="text" id="ten_san_pham" class="mt-1 p-2 w-full border border-gray-600 bg-gray-700 text-white rounded" required>
           </div>
           <div class="mb-4">
-            <label class="block text-sm font-medium text-gray-700">Giá</label>
-            <input type="number" id="gia" class="mt-1 p-2 w-full border rounded" required>
+            <label class="block text-sm font-medium text-gray-300">Giá</label>
+            <input type="number" id="gia" class="mt-1 p-2 w-full border border-gray-600 bg-gray-700 text-white rounded" required>
           </div>
           <div class="mb-4">
-            <label class="block text-sm font-medium text-gray-700">Số lượng</label>
-            <input type="number" id="so_luong" class="mt-1 p-2 w-full border rounded" required>
+            <label class="block text-sm font-medium text-gray-300">Số lượng</label>
+            <input type="number" id="so_luong" class="mt-1 p-2 w-full border border-gray-600 bg-gray-700 text-white rounded" required>
           </div>
           <div class="mb-4">
-            <label class="block text-sm font-medium text-gray-700">ID Danh mục</label>
-            <input type="number" id="id_danh_muc" class="mt-1 p-2 w-full border rounded" required>
+            <label class="block text-sm font-medium text-gray-300">ID Danh mục</label>
+            <input type="number" id="id_danh_muc" class="mt-1 p-2 w-full border border-gray-600 bg-gray-700 text-white rounded" required>
           </div>
           <div class="mb-4">
-            <label class="block text-sm font-medium text-gray-700">Hình ảnh</label>
-            <input type="file" id="hinh_anh" class="mt-1 p-2 w-full border rounded" accept="image/*">
-            <p id="currentImage" class="text-sm text-gray-500 mt-1"></p>
+            <label class="block text-sm font-medium text-gray-300">Hình ảnh</label>
+            <input type="file" id="hinh_anh" class="mt-1 p-2 w-full border border-gray-600 bg-gray-700 text-white rounded" accept="image/*">
+            <p id="currentImage" class="text-sm text-gray-300 mt-1"></p>
           </div>
-          <button type="submit" id="submitButton" class="bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600">Thêm sản phẩm</button>
+          <button type="submit" id="submitButton" class="bg-indigo-600 text-white py-2 px-4 rounded hover:bg-indigo-700">Thêm sản phẩm</button>
         </form>
 
-        <h2 class="text-3xl font-bold mb-6">Danh sách Sản phẩm</h2>
-        <div class="bg-white shadow-md rounded-lg p-6">
-          <table class="w-full text-left">
-            <thead>
+        <h2 class="text-3xl font-bold text-white mb-6">Danh sách Sản phẩm</h2>
+        <div class="bg-gray-800 shadow-md rounded-lg p-6">
+          <table class="w-full text-left text-white">
+            <thead class="bg-gray-700 text-gray-300 uppercase">
               <tr>
                 <th class="p-2">ID</th>
                 <th class="p-2">Tên Sản phẩm</th>
@@ -79,133 +78,23 @@
                 <th class="p-2">Hành động</th>
               </tr>
             </thead>
-            <tbody id="productList">
+            <tbody id="productList" class="divide-y divide-gray-600 text-gray-100">
               <!-- Sản phẩm sẽ được thêm bằng JavaScript -->
             </tbody>
           </table>
         </div>
-      </main>
-    </div>
-
-    <!-- Footer -->
-    <footer class="bg-black text-white py-4">
-      <div class="container mx-auto px-4 text-center">
-        <p>© 2025 DTN Shop. All rights reserved.</p>
       </div>
-    </footer>
+    </main>
+  </div>
 
-    <!-- JavaScript -->
-    <script>
-      document.getElementById('productForm').addEventListener('submit', async (e) => {
-        e.preventDefault();
-        const editId = document.getElementById('editId').value;
-        const method = editId ? 'PUT' : 'POST';
-        const url = editId ? `http://127.0.0.1:5000/sanpham/${editId}` : 'http://127.0.0.1:5000/sanpham';
+  <!-- Footer -->
+  <footer class="bg-gray-800 border-t border-gray-700 py-4">
+    <div class="container mx-auto px-4 text-center">
+      <p class="text-gray-300">© 2025 DTN Shop. All rights reserved.</p>
+    </div>
+  </footer>
 
-        const formData = new FormData();
-        formData.append('id_san_pham', document.getElementById('id_san_pham').value);
-        formData.append('ten_san_pham', document.getElementById('ten_san_pham').value);
-        formData.append('gia', document.getElementById('gia').value);
-        formData.append('so_luong', document.getElementById('so_luong').value);
-        formData.append('id_danh_muc', document.getElementById('id_danh_muc').value);
-        const fileInput = document.getElementById('hinh_anh');
-        if (fileInput.files[0]) {
-          formData.append('hinh_anh', fileInput.files[0]);
-        } else if (editId) {
-          formData.append('hinh_anh', document.getElementById('currentImage').dataset.current || '');
-        }
-
-        try {
-          const response = await fetch(url, {
-            method: method,
-            body: formData
-          });
-          const result = await response.json();
-          if (response.ok) {
-            alert(result.message || `${method === 'PUT' ? 'Cập nhật' : 'Thêm'} sản phẩm thành công`);
-            resetForm();
-            fetchProducts();
-          } else {
-            alert(`Lỗi từ server: ${result.error || 'Không xác định'}. Vui lòng kiểm tra console.`);
-          }
-        } catch (error) {
-          console.error('Lỗi chi tiết:', error);
-          alert(` ${method === 'PUT' ? 'cập nhật' : 'thêm'} sản phẩm. Click "ok".`);
-        }
-      });
-
-      async function fetchProducts() {
-        try {
-          const response = await fetch('http://127.0.0.1:5000/sanpham');
-          if (!response.ok) throw new Error('Không thể lấy dữ liệu sản phẩm');
-          const products = await response.json();
-          const productList = document.getElementById('productList');
-          productList.innerHTML = '';
-          products.forEach(product => {
-            const row = `
-              <tr>
-                <td class="p-2">${product.id_san_pham}</td>
-                <td class="p-2">${product.ten_san_pham}</td>
-                <td class="p-2">${product.gia.toLocaleString('vi-VN')} VNĐ</td>
-                <td class="p-2">${product.so_luong}</td>
-                <td class="p-2"><img src="${product.hinh_anh || '/images/default.jpg'}" alt="${product.ten_san_pham}" class="w-16 h-16 object-cover"></td>
-                <td class="p-2">${product.id_danh_muc}</td>
-                <td class="p-2">
-                  <button class="bg-yellow-500 text-white py-1 px-3 rounded hover:bg-yellow-600 mr-2" onclick="editProduct(${product.id_san_pham}, '${product.ten_san_pham}', ${product.gia}, ${product.so_luong}, '${product.hinh_anh || ''}', ${product.id_danh_muc})">Sửa</button>
-                  <button class="bg-red-500 text-white py-1 px-3 rounded hover:bg-red-600" onclick="deleteProduct(${product.id_san_pham})">Xóa</button>
-                </td>
-              </tr>`;
-            productList.innerHTML += row;
-          });
-        } catch (error) {
-          console.error('Lỗi khi lấy sản phẩm:', error);
-          document.getElementById('productList').innerHTML = '<tr><td colspan="7" class="text-center text-red-500">Lỗi khi tải sản phẩm.</td></tr>';
-        }
-      }
-
-      function editProduct(id, ten, gia, soLuong, hinhAnh, idDanhMuc) {
-        document.getElementById('editId').value = id;
-        document.getElementById('id_san_pham').value = id;
-        document.getElementById('ten_san_pham').value = ten;
-        document.getElementById('gia').value = gia;
-        document.getElementById('so_luong').value = soLuong;
-        document.getElementById('id_danh_muc').value = idDanhMuc;
-        document.getElementById('currentImage').textContent = hinhAnh ? `Ảnh hiện tại: ${hinhAnh}` : 'Không có ảnh';
-        document.getElementById('currentImage').dataset.current = hinhAnh || '';
-        document.getElementById('submitButton').textContent = 'Cập nhật sản phẩm';
-        window.scrollTo({ top: 0, behavior: 'smooth' });
-      }
-
-      function resetForm() {
-        document.getElementById('productForm').reset();
-        document.getElementById('editId').value = '';
-        document.getElementById('currentImage').textContent = '';
-        document.getElementById('currentImage').dataset.current = '';
-        document.getElementById('submitButton').textContent = 'Thêm sản phẩm';
-      }
-
-      async function deleteProduct(id) {
-        if (confirm(`Bạn có chắc chắn muốn xóa sản phẩm ID ${id}?`)) {
-          try {
-            const response = await fetch(`http://127.0.0.1:5000/sanpham/${id}`, {
-              method: 'DELETE',
-              headers: { 'Content-Type': 'application/json' }
-            });
-            const result = await response.json();
-            if (response.ok) {
-              alert(result.message || 'Xóa sản phẩm thành công');
-              fetchProducts(); // Làm mới danh sách
-            } else {
-              alert(`Lỗi từ server: ${result.error || 'Không xác định'}. Vui lòng kiểm tra console.`);
-            }
-          } catch (error) {
-            console.error('Lỗi chi tiết khi xóa:', error);
-            alert('Thông báo click "ok" và reload lại');
-          }
-        }
-      }
-
-      document.addEventListener('DOMContentLoaded', fetchProducts);
-    </script>
+  <!-- JavaScript -->
+  <script src="js/admin-products.js"></script>
 </body>
 </html>
